force-app/main/default/objects/DMAPP__Dealmaker_Political_Map_Settings2__c/fields/DMAPP__Absolute_Weight_Field__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Absolute_Weight_Field__c</fullName>
    <description>The name of the &apos;Absolute Weight&apos; custom field on the Relationship Map Contact object.</description>
    <inlineHelpText>The name of the &apos;Absolute Weight&apos; custom field on the Relationship Map Contact object.</inlineHelpText>
    <label>Absolute Weight Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>