force-app/main/default/objects/DMAPP__Dealmaker_Political_Map_Settings2__c/fields/DMAPP__AM_Color_Field__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__AM_Color_Field__c</fullName>
    <description>The name of the &apos;Color&apos; custom field on the Account Relationship Map Contact object.</description>
    <inlineHelpText>The name of the &apos;Color&apos; custom field on the Account Relationship Map Contact object.</inlineHelpText>
    <label>AM Color Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>