force-app/main/default/objects/DMAPP__Dealmaker_Political_Map_Settings2__c/fields/DMAPP__Hide_Contact_Profile_Photo__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Hide_Contact_Profile_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to show the generic &apos;shadow&apos; image on contact nodes, rather than the contact&apos;s profile photo.</description>
    <inlineHelpText>Select this checkbox to show the generic &apos;shadow&apos; image on contact nodes, rather than the contact&apos;s profile photo.</inlineHelpText>
    <label>Hide Contact Profile Photo</label>
    <type>Checkbox</type>
</CustomField>